# B.O.R.A.T

3D printed parts/: PI3MK3M_1.gcode  PI3MK3M_2.gcode  PI3MK3M_BALL CAGE 1.gcode  PI3MK3M_BALL CAGE 2.gcode  PI3MK3M_Body146.gcode  PI3MK3M_Body180.gcode  PI3MK3M_Body26.gcode  PI3MK3M_Body3.gcode  PI3MK3M_Body4.gcode  PI3MK3M_Body6.gcode  PI3MK3M_FRONT PANEL LOGO.gcode  PI3MK3M_SIDE PANEL ON.gcode  PI3MK3M_STEPPER PANEL 1.gcode  PI3MK3M_STEPPER PANEL 4.gcode  PI3MK3M_Side Panel 1.gcode  PI3MK3M_Side Panel 2.gcode  PI3MK3M_Side Panel 3.gcode  PI3MK3M_TOP PANEL 1.gcode  PI3MK3M_TOP PANEL 2.gcode  PI3MK3M_TOP PANEL 3.gcode  PI3MK3M_TOP PANEL 4.gcode  PI3MK3M_TOP PANEL 5.gcode  PI3MK3M_TOP PANEL 6.gcode
3d files/Solidworks/: Link_1.SLDPRT  Link_1.step  Link_2.SLDPRT  Link_2.step  Link_3.SLDPRT  Link_4.SLDPRT  Link_4.step  Link_5.SLDPRT  Link_6.SLDPRT  Link_6.step
Borat_MoveIt_URDF/: CMakeLists.txt  package.xml
Borat_MoveIt_URDF/launch/: display.launch  gazebo.launch
Borat_MoveIt_URDF/meshes/: Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL
Borat_MoveIt_URDF/urdf/: Borat_MoveIt_URDF.csv  Borat_MoveIt_URDF.urdf
CNC machined parts/Production Files/: 3PLT.iges  3mm shaft coupler v2.step  Arm3 v39.step  COUPLER 5.step  EF Gear 1.step  EF Gear 2.step  EF Gear 3.step  ENCO.iges  ENCOT.iges  ENPL.iges  Encoder Plate v1.step  GBCO.iges  J2-ARM1.step  J2-ARM2.step  J2-BLOCK.step  J3B1.iges  J3B1.step  J3B2.iges  J3B2.step  J3BBM.iges  J3BBP.iges  J3BGP.iges  J3BM.iges  J3BM.step  J3BMP.iges  J3BMS.iges  J3GS.iges  J3GS.step  (+16 more)
Code/: README.md
(+3411 files in other folders)
